# ConfigGen

./: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt
src/color_manager/: CMakeLists.txt
src/color_manager/include/: color_manager.hpp  patterns.hpp
src/color_manager/src/: color_manager.cpp
src/config_loader/: CMakeLists.txt
src/config_loader/include/: config_loader.hpp  names.hpp
src/config_loader/src/: config_loader.cpp
src/utils/: CMakeLists.txt
src/utils/include/: hsl.hpp  kmeans.cpp  kmeans.hpp  rgb.hpp  timer.hpp
src/utils/src/: hsl.cpp  hsl_operators.cpp  rgb.cpp  rgb_operators.cpp
